# ic-oxigraph

./: Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
lib/: Cargo.toml
lib/oxsdatatypes/: Cargo.toml
lib/oxsdatatypes/src/: date_time.rs
lib/src/: lib.rs  store.rs
lib/src/sparql/: eval.rs  mod.rs  time.rs
lib/src/storage/: binary_encoder.rs  mod.rs
lib/src/storage/backend/: mod.rs
