[package]
name = "ic-oxigraph"
version = "0.3.17-dev"
license = "MIT"
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database", "internet-computer", "dfinity"]
categories = ["database-implementations"]
repository = "https://github.com/omnia-network/ic-oxigraph/tree/main/lib"
description = """
an RDF database running on the Internet Computer
"""
edition = "2021"
rust-version = "1.60"

[dependencies]
rand = "0.8"
md-5 = "0.10"
sha-1 = "0.10"
sha2 = "0.10"
digest = "0.10"
regex = "1"
oxilangtag = "0.1"
oxiri = "0.2"
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"
hex = "0.4"
siphasher = "0.3"
lazy_static = "1"
json-event-parser = "0.1"
oxrdf = { version = "0.1.6-dev", path="oxrdf", features = ["rdf-star", "oxsdatatypes"] }
oxsdatatypes = { version = "0.1.2-dev", path="oxsdatatypes" }
spargebra = { version = "0.2.8-dev", path="spargebra", features = ["rdf-star", "sep-0002", "sep-0006"] }
sparesults = { version = "0.1.8-dev", path="sparesults", features = ["rdf-star"] }
ic-cdk = "0.7.4"
getrandom = { version = "0.2", features = ["custom"] }
rand_chacha = "0.3.1"
ic-cdk-timers = "0.1.2"

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
